<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Recipes" Id="{20711735-9967-410b-a588-bfbd1b205bf6}">
    <Declaration><![CDATA[TYPE ST_Recipes :
STRUCT
	arrIngredient			: ARRAY [1..GVL_BaseConstans.MAX_NUMBER_Of_INGREDIENTS] OF ST_BaseDescriptor;
	uiNumber				: UINT;	//ilosc dodanych skladnikow
	stTexts					: ST_BaseLabel;
	uiTemplate				: UINT;	//określenie z którego szablonu stworzona receptura różna programy Wykonawcze
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>